gnstlib_fortran/gnstlib.h

// compute sinh(x)
double gnstlib_sinh(const double x);
// compute tanh(x)
double gnstlib_tanh(const double x);
// compute sech(x)
double gnstlib_sech(const double x);
// compute csch(x)
double gnstlib_csch(const double x);
// compute coth(x)
double gnstlib_coth(const double x);
// compute acosh(x)
double gnstlib_acosh(const double x);
// compute asinh(x)
double gnstlib_asinh(const double x);
// compute atanh(x)
double gnstlib_atanh(const double x);
// compute asech(x)
double gnstlib_asech(const double x);
// compute acsch(x)
double gnstlib_acsch(const double x);
// compute acoth(x)
double gnstlib_acoth(const double x);
// compute cosh(z)
std::complex<double> gnstlib_ccosh(const std::complex<double> z);
// compute sinh(z)
std::complex<double> gnstlib_csinh(const std::complex<double> z);
// compute tanh(z)
std::complex<double> gnstlib_ctanh(const std::complex<double> z);
// compute sech(z)
std::complex<double> gnstlib_csech(const std::complex<double> z);
// compute csch(z)
std::complex<double> gnstlib_ccsch(const std::complex<double> z);
// compute coth(z)
std::complex<double> gnstlib_ccoth(const std::complex<double> z);
// compute acosh(z)
std::complex<double> gnstlib_cacosh(const std::complex<double> z);
// compute asinh(z)
std::complex<double> gnstlib_casinh(const std::complex<double> z);
// compute atanh(z)
std::complex<double> gnstlib_catanh(const std::complex<double> z);
// compute asech(z)
std::complex<double> gnstlib_casech(const std::complex<double> z);
// compute acsch(z)
std::complex<double> gnstlib_cacsch(const std::complex<double> z);
// compute acoth(z)
std::complex<double> gnstlib_cacoth(const std::complex<double> z);
/* Power functions */
/******************************************************************************/
// compute pow(x, y)
double gnstlib_pow(const double x, const double y);
// compute sqrt(x)
double gnstlib_sqrt(const double x);
// compute hypot(x, y)
double gnstlib_hypot(const double x, const double y);
// compute cbrt(x)
double gnstlib_cbrt(const double x);
// compute powm1(x, y) = x^y - 1
double gnstlib_powm1(const double x, const double y, int& err_id);
// compute power(cx, cy)
std::complex<double> gnstlib_cpow(const std::complex<double> x, 
                                  const std::complex<double> y);
// compute sqrt(z)
std::complex<double> gnstlib_csqrt(const std::complex<double> z);
/* Gamma functions */
/******************************************************************************/

/* main functions */

// compute gamma(x)
double gnstlib_gamma(const double x, int& err_id);
// compute gammaln(x) = Log(gamma(|x|))
double gnstlib_gammaln(const double x, int& err_id);
// compute gammasign(x) => gammaln(x)
int gnstlib_gammasign(const double x);
// compute factorial(n)
double gnstlib_factorial(const int n, int& err_id);
// compute quotient of two gammas
double gnstlib_qgamma(const double x, const double y, int& err_id);
// compute gamma(z)
std::complex<double> gnstlib_cgamma(const std::complex<double> z, 
                                    int& err_id);
// compute logGamma(z)
std::complex<double> gnstlib_loggamma(const std::complex<double> z, 
                                      int& err_id);
// compute rgamma(z) = 1 / gamma(z)
std::complex<double> gnstlib_rgamma(const std::complex<double> z);
/* auxiliary function */

// compute Stirling series (x > 0)
double gnstlib_stirling(const double x, int& err_id);
// compute scaled gamma function (x > 0)
double gnstlib_gammastar(const double x, int& err_id);
// compute auxiliary function g(x) for x in [-1,1]
double gnstlib_auxgam(const double x, int& err_id);
/* vectorized functions */

void gnstlib_gamma_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_gammaln_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_cgamma_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_loggamma_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);