gnstlib_fortran/gnstlib_cdef.f90


    function gnstlib_sinh_c(x) bind(C, name="gnstlib_sinh")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_sinh_c
        real(c_double), intent(in), value :: x
    end function gnstlib_sinh_c

    function gnstlib_tanh_c(x) bind(C, name="gnstlib_tanh")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_tanh_c
        real(c_double), intent(in), value :: x
    end function gnstlib_tanh_c

    function gnstlib_sech_c(x) bind(C, name="gnstlib_sech")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_sech_c
        real(c_double), intent(in), value :: x
    end function gnstlib_sech_c

    function gnstlib_csch_c(x) bind(C, name="gnstlib_csch")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_csch_c
        real(c_double), intent(in), value :: x
    end function gnstlib_csch_c

    function gnstlib_coth_c(x) bind(C, name="gnstlib_coth")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_coth_c
        real(c_double), intent(in), value :: x
    end function gnstlib_coth_c

    function gnstlib_acosh_c(x) bind(C, name="gnstlib_acosh")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_acosh_c
        real(c_double), intent(in), value :: x
    end function gnstlib_acosh_c

    function gnstlib_asinh_c(x) bind(C, name="gnstlib_asinh")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_asinh_c
        real(c_double), intent(in), value :: x
    end function gnstlib_asinh_c

    function gnstlib_atanh_c(x) bind(C, name="gnstlib_atanh")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_atanh_c
        real(c_double), intent(in), value :: x
    end function gnstlib_atanh_c

    function gnstlib_asech_c(x) bind(C, name="gnstlib_asech")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_asech_c
        real(c_double), intent(in), value :: x
    end function gnstlib_asech_c

    function gnstlib_acsch_c(x) bind(C, name="gnstlib_acsch")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_acsch_c
        real(c_double), intent(in), value :: x
    end function gnstlib_acsch_c

    function gnstlib_acoth_c(x) bind(C, name="gnstlib_acoth")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_acoth_c
        real(c_double), intent(in), value :: x
    end function gnstlib_acoth_c

    function gnstlib_ccosh_c(z) bind(C, name="gnstlib_ccosh")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ccosh_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ccosh_c

    function gnstlib_csinh_c(z) bind(C, name="gnstlib_csinh")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_csinh_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_csinh_c

    function gnstlib_ctanh_c(z) bind(C, name="gnstlib_ctanh")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ctanh_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ctanh_c

    function gnstlib_csech_c(z) bind(C, name="gnstlib_csech")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_csech_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_csech_c

    function gnstlib_ccsch_c(z) bind(C, name="gnstlib_ccsch")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ccsch_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ccsch_c

    function gnstlib_ccoth_c(z) bind(C, name="gnstlib_ccoth")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ccoth_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ccoth_c

    function gnstlib_cacosh_c(z) bind(C, name="gnstlib_cacosh")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cacosh_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_cacosh_c

    function gnstlib_casinh_c(z) bind(C, name="gnstlib_casinh")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_casinh_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_casinh_c

    function gnstlib_catanh_c(z) bind(C, name="gnstlib_catanh")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_catanh_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_catanh_c

    function gnstlib_casech_c(z) bind(C, name="gnstlib_casech")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_casech_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_casech_c

    function gnstlib_cacsch_c(z) bind(C, name="gnstlib_cacsch")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cacsch_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_cacsch_c

    function gnstlib_cacoth_c(z) bind(C, name="gnstlib_cacoth")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cacoth_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_cacoth_c

    function gnstlib_pow_c(x, y) bind(C, name="gnstlib_pow")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_pow_c
        real(c_double), intent(in), value :: x, y
    end function gnstlib_pow_c

    function gnstlib_sqrt_c(x) bind(C, name="gnstlib_sqrt")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_sqrt_c
        real(c_double), intent(in), value :: x
    end function gnstlib_sqrt_c

    function gnstlib_hypot_c(x, y) bind(C, name="gnstlib_hypot")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_hypot_c
        real(c_double), intent(in), value :: x, y
    end function gnstlib_hypot_c

    function gnstlib_cbrt_c(x) bind(C, name="gnstlib_cbrt")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_cbrt_c
        real(c_double), intent(in), value :: x
    end function gnstlib_cbrt_c

    function gnstlib_powm1_c(x, y, err_id) bind(C, name="gnstlib_powm1")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_powm1_c
        real(c_double), intent(in), value :: x, y
        integer(c_int), intent(out) :: err_id
    end function gnstlib_powm1_c

    function gnstlib_cpow_c(x, y) bind(C, name="gnstlib_cpow")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cpow_c
        complex(c_double_complex), intent(in), value :: x, y
    end function gnstlib_cpow_c

    function gnstlib_csqrt_c(z) bind(C, name="gnstlib_csqrt")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_csqrt_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_csqrt_c
    
    function gnstlib_gamma_c(x, err_id) bind(C, name="gnstlib_gamma")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_gamma_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_gamma_c

    function gnstlib_gammaln_c(x, err_id) bind(C, name="gnstlib_gammaln")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_gammaln_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_gammaln_c

    function gnstlib_gammasign_c(x) bind(C, name="gnstlib_gammasign")
        use iso_c_binding
        implicit none
        integer(c_int) :: gnstlib_gammasign_c
        real(c_double), intent(in), value :: x
    end function gnstlib_gammasign_c

    function gnstlib_factorial_c(n, err_id) bind(C, name="gnstlib_factorial")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_factorial_c
        integer(c_int), intent(in), value :: n
        integer(c_int), intent(out) :: err_id
    end function gnstlib_factorial_c

    function gnstlib_qgamma_c(x, y, err_id) bind(C, name="gnstlib_qgamma")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_qgamma_c
        real(c_double), intent(in), value :: x, y
        integer(c_int), intent(out) :: err_id
    end function gnstlib_qgamma_c

    function gnstlib_cgamma_c(z, err_id) bind(C, name="gnstlib_cgamma")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cgamma_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cgamma_c

    function gnstlib_loggamma_c(z, err_id) bind(C, name="gnstlib_loggamma")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_loggamma_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_loggamma_c

    function gnstlib_rgamma_c(z) bind(C, name="gnstlib_rgamma")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_rgamma_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_rgamma_c

    function gnstlib_stirling_c(x, err_id) bind(C, name="gnstlib_stirling")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_stirling_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_stirling_c

    function gnstlib_gammastar_c(x, err_id) bind(C, name="gnstlib_gammastar")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_gammastar_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_gammastar_c

    function gnstlib_auxgam_c(x, err_id) bind(C, name="gnstlib_auxgam")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_auxgam_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_auxgam_c

    subroutine gnstlib_gamma_vec_c(n, v, r, option) bind(C, name="gnstlib_gamma_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_gamma_vec_c

    subroutine gnstlib_gammaln_vec_c(n, v, r, option) bind(C, name="gnstlib_gammaln_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_gammaln_vec_c

    subroutine gnstlib_cgamma_vec_c(n, v, r, option) bind(C, name="gnstlib_cgamma_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cgamma_vec_c

    subroutine gnstlib_loggamma_vec_c(n, v, r, option) bind(C, name="gnstlib_loggamma_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_loggamma_vec_c
